Fixes #171 white pipeline buttons
Replacing pipeline-graph CSS class with something similar. (this id
selector is not full width though!)

build CSS class is renamed to gl-build

ci-job-name-component does not directly contain gl-text-truncate

pipeline-tab-content is removed so the appropriate styling is removed
as well. This could be changed with a bit of trickery by using a
selector which is starting with js even though far from optimal and
using a `> div` CSS selector which is again terrible, but there are no
more specific selectors at that level. The only reasonable selector
would be [id^="pipeline-links-container-"] but that is too low in the
DOM to make the background lighter:(((

--- a/gitlab.user.styl
+++ b/gitlab.user.styl
@@ -3927,12 +3927,12 @@ regexp('^https?://(web.archive.org/web/.*)?((next|www)\.)?(gitlab\.(?!(io|biterg
     }
 
     // Project -> Pipelines.
-    .pipeline-graph {
-        /// Pipelines -> Tab background.
-        &.pipeline-tab-content { c: 0 0 hl }
+    .js-pipeline-graph {
+        > div  {
+            c: 0 0 hl
+        }
         /// Pipelines -> Stages.
-        .build {
-            width: 100% i;
+        .gl-build {
             &-content {
                 c: fg1 bg5 bg1
                 transition: 0.1s ease i
@@ -3966,12 +3966,12 @@ regexp('^https?://(web.archive.org/web/.*)?((next|www)\.)?(gitlab\.(?!(io|biterg
 
         /// Feat -> Compact pipelines.
         if (pipelines) {
-            .build {
+            .gl-build {
                 margin-bottom: 5px
                 &-content { padding: 5px i }
             }
             /// Projects -> Show full name.
-            .ci-job-name-component > .gl-text-truncate {
+            .ci-job-name-component .gl-text-truncate {
                 max-width: 100%;
                 margin-right: 35px
             }
